--- a/src/main/resources/templates/pay/details.html
+++ b/src/main/resources/templates/pay/details.html
@@ -13,7 +13,7 @@
         <div class="grid md:grid-cols-2 gap-8 lg:gap-12 items-center">
             <div>
                 <img
-                        src="/placeholder.svg"
+                        src="/img/arduino.jpeg"
                         width="800"
                         height="800"
                         alt="Smart Farm Device"
