--- a/src/main/resources/templates/pay/details.html
+++ b/src/main/resources/templates/pay/details.html
@@ -111,7 +111,7 @@
                             Seamlessly integrate with our mobile app for complete control and convenience.
                         </p>
                     </div>
-                    <form action="/pay/detailPage" method="POST">
+                    <form action="/pay/details" method="POST">
                     <div class="flex items-center gap-4">
                                 <input
                                         type="number"
