--- a/src/main/resources/templates/pay/cart.html
+++ b/src/main/resources/templates/pay/cart.html
@@ -15,7 +15,7 @@
                     <h2 class="text-2xl font-bold">주문 상세내역</h2>
                     <div class="flex items-center gap-4">
                         <button class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2">
-                            <a th:href="@{'/pay/update/' + ${row.order_id}}">수정</a>
+                            <a th:href="@{'/pay/newUpdate/' + ${row.order_id}}">수정</a>
                         </button>
                         <button class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-10 px-4 py-2">
                             <a th:href="@{'/pay/delete/' + ${row.order_id}}">삭제</a>
@@ -84,6 +84,7 @@
         </div>
     </main>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <!-- jQuery -->
 <script type="text/javascript"
         src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -92,7 +93,7 @@
         src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
 <script>
     var IMP = window.IMP;
-    IMP.init("imp01786831");
+    IMP.init("your_imp_code");
 
     function requestPay() {
         var selectedPayMethod = document.querySelector('input[name="pay_method"]:checked').value;
