--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -33,7 +33,8 @@
       <h1 class="text-3xl font-bold">새로운 글 쓰기</h1>
       <p class="text-gray-500">스마트 농업 기술에 대한 여러분의 생각을 공유하세요!</p>
     </div>
-    <form class="space-y-4">
+    <form class="space-y-4" th:action="${row != null} ? @{'/board/updatefB/' + ${row.id}} : @{'/board/fBadd'}"
+          method="POST">
       <div>
         <label for="title" class="block font-medium text-gray-700">
           제목
@@ -43,6 +44,7 @@
                 class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-green-500 focus:ring-green-500 sm:text-sm"
                 placeholder="글 제목을 입력하세요"
                 type="text"
+                th:name="title" th:value="${row?.title}" th:required
         />
       </div>
       <div>
@@ -55,13 +57,17 @@
                   rows="8"
                   class="block w-full rounded-md border-gray-300 shadow-sm focus:border-green-500 focus:ring-green-500 sm:text-sm"
                   placeholder="여기에 게시물 컨텐츠를 작성하세요..."
+                  th:name="contents" th:value="${row?.contents}" th:required
           ></textarea>
         </div>
       </div>
+      <p><input th:name="member_id" th:value="${session.user.id}" type="hidden" required></p>
+
       <div class="flex justify-end">
         <button
                 type="submit"
                 class="inline-flex items-center rounded-md border border-transparent bg-green-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2"
+                th:text="${row != null} ? '수정하기' : '작성하기'"
         >
           작성하기
         </button>
