--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <img
-                        src="/img/mainImg.jpg"
+                        src="/img/arduino.jpeg"
                         width="550"
                         height="310"
                         alt="Arduino Devices"
@@ -83,7 +83,7 @@
         <div class="container px-4 md:px-6 flex flex-col items-center">
             <div class="grid items-center gap-6 lg:grid-cols-2 lg:gap-12 text-center">
                 <img
-                        src="/img/mainImg.jpg"
+                        src="/img/mobileApp.png"
                         width="550"
                         height="310"
                         alt="Mobile App"
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <img
-                        src="/img/mainImg.jpg"
+                        src="/img/community.jpeg"
                         width="550"
                         height="310"
                         alt="Community"
