--- a/src/main/resources/templates/pay/order.html
+++ b/src/main/resources/templates/pay/order.html
@@ -132,11 +132,10 @@ button:hover {
 
 	<!-- 결제 옵션 및 버튼 -->
 	<div class="payment-options">
-		<label><input type="radio" name="pay_method" value="card"
-			checked>신용카드</label> <label><input type="radio"
-			name="pay_method" value="trans">실시간 계좌이체</label> <label><input
-			type="radio" name="pay_method" value="vbank">가상계좌</label> <label><input
-			type="radio" name="pay_method" value="phone">휴대폰 소액결제</label>
+		<label><input type="radio" name="pay_method" value="card" checked>신용카드</label>
+		<label><input type="radio" name="pay_method" value="trans">실시간 계좌이체</label>
+		<label><input type="radio" name="pay_method" value="vbank">가상계좌</label>
+		<label><input type="radio" name="pay_method" value="phone">휴대폰 소액결제</label>
 	</div>
 	<button onclick="requestPay()">결제하기</button>
 
